# BluebirdATC

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
bluebird-api/: README.md  __main__.py  mkdocs.yml  pyproject.toml
bluebird-api/bluebird_api/: __init__.py  models.py  route_tags.py  routes.py  runner.py  runnerabc.py  serve.py
bluebird-api/bluebird_api/hmi/: index.html
bluebird-api/bluebird_api/hmi/assets/: index-Coq7TEcD.js  index-Dwp_QOMx.js
bluebird-api/bluebird_api/routers/: __init__.py  core.py
bluebird-api/docs/: getting-started.md  index.md  source.md
bluebird-api/examples/: NonPythonAgents.ipynb
bluebird-api/tests/api/: conftest.py  test_routes.py
bluebird-dt/: README.md  mkdocs.yml  pyproject.toml
bluebird-dt/bluebird_dt/: logger.py
bluebird-dt/bluebird_dt/aircraft_data/: aircraft_weight_map.json  simple_performance_profile_data.json  simple_performance_uncertainty_data.json
bluebird-dt/bluebird_dt/airspace_generator/: __init__.py  airspace_generator.py  artificial_airspace.py  sector_i.py  sector_x.py  sector_xplus.py  sector_y.py  thunderdome.py  two_sectors.py
bluebird-dt/bluebird_dt/core/: __init__.py  action.py  aircraft.py  airspace.py  airway.py  area.py  coordination.py  environment.py  fixes.py  flight_plan.py  pilot.py  pos2d.py  pos3d.py  pos4d.py  route.py  sector.py  volume.py  wind.py
bluebird-dt/bluebird_dt/events/: __init__.py  event_dtypes.py  event_handler.py  event_logger.py
bluebird-dt/bluebird_dt/manager/: __init__.py  environment_manager.py
bluebird-dt/bluebird_dt/mixin/: __init__.py  core_mixin.py
bluebird-dt/bluebird_dt/predictor/: __init__.py  linear_predictor.py  predictor.py  route_follow_predictor.py  simple_predictor.py
bluebird-dt/bluebird_dt/render/: __init__.py  radar.py  render.py
bluebird-dt/bluebird_dt/scenario_data/Springfield/: airways.json  fixes.csv  routes_and_exits.json
bluebird-dt/bluebird_dt/scenario_manager/: __init__.py  infinite.py  outcomm_handler.py  regular.py  scenario_manager.py  springfield.py  tactical.py  two_aircraft.py
bluebird-dt/bluebird_dt/simulator/: __init__.py  common.py  simconfig.py  simulator.py
bluebird-dt/bluebird_dt/utility/: airspace_data.py  artificial_airspace_defaults.py  clearance.py  constants.py  convert.py  geo_helper.py  geometry.py  graph.py  logging_utils.py  number.py  paths.py  performance.py  sample.py  scenario_utils.py  stereographic_projection.py  supported_actions.py
bluebird-dt/docs/: get_version.py  getting-started.md  index.md  source.md
bluebird-dt/docs/airspace/: index.md
bluebird-dt/docs/design/: index.md
bluebird-dt/docs/scenarios/: index.md
bluebird-dt/examples/: Intro-Part-1.ipynb  Intro-Part-2.ipynb  Intro-Part-3.ipynb  Intro-Part-4.ipynb  NonPythonAgents.ipynb
bluebird-dt/examples/render/: radar.ipynb
bluebird-dt/tests/test_data/: 1.geojson  1_aor.geojson  1_conditional.geojson  test_fixes.csv
bluebird-dt/tests/unit/: conftest.py
bluebird-dt/tests/unit/airspace_generator/: test_airspace_generators.py
bluebird-dt/tests/unit/core/: conftest.py  core_conftest.py  test_action.py  test_aircraft.py  test_airspace.py  test_airway.py  test_area.py  test_coordination.py  test_core_coordination.py  test_environment.py  test_fixes.py  test_flight_plan.py  test_pilot.py  test_pos2d.py  test_pos3d.py  test_pos4d.py  test_route.py  test_sector.py  test_serialise.py  test_volume.py  test_wind.py
bluebird-dt/tests/unit/events/: conftest.py  test_event_handler.py
bluebird-dt/tests/unit/logging/: conftest.py  (+2 more)
bluebird-gymnasium/: ALTERNATE_INSTALLATION.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
bluebird-gymnasium/bluebird_gymnasium/: __init__.py
bluebird-gymnasium/bluebird_gymnasium/actions/: __init__.py  action_parser.py
bluebird-gymnasium/bluebird_gymnasium/envs/: __init__.py  base.py  infinite.py  sector_i.py  sector_x.py  sector_xplus.py  sector_y.py  springfield.py
bluebird-gymnasium/bluebird_gymnasium/rewards/: __init__.py  action_penalty.py  climb_descent.py  conflict_resolution.py  expeditious.py  lateral_centreline_distance.py  lateral_next_fix_proximity.py  lateral_termination_check.py  position.py  route_parallel.py  safety.py
bluebird-gymnasium/bluebird_gymnasium/state_repr/: __init__.py  base.py  constants.py  extraminimal.py  full.py  minimal.py  relative.py  vanilla.py
bluebird-gymnasium/bluebird_gymnasium/utils/: constants.py  geo_utils.py  interaction_utils.py  module_registry.py  policy_utils.py  simulator_utils.py  types.py  video.py  visualize.py
bluebird-gymnasium/bluebird_gymnasium/wrappers/: trajectory_overlay.py
bluebird-gymnasium/docs/: actions.md  agent_view.md  configurations.md  getting-started.md  index.md  rewards.md  source.md  state_representations.md
bluebird-gymnasium/examples/: agent_demo.ipynb  radar_actions_display_demo.ipynb  radar_scales_demo.ipynb  simple_demo.ipynb
bluebird-gymnasium/tests/actions/: conftest.py  test_action_climb_descent.py  test_action_heading.py  test_action_outcomm.py  test_action_route_direct.py  test_action_speed.py
bluebird-gymnasium/tests/envs/: test_infinite.py  test_reset_seed.py  test_sector_i.py  test_sector_x.py  test_sector_xplus.py  test_sector_y.py  test_springfield.py
bluebird-gymnasium/tests/rewards/: conftest.py  test_action_penalty.py  test_climb_descent.py  test_conflict_resolution.py  test_expeditious.py  test_lateral_centreline_distance.py  test_lateral_next_fix_proximity.py  test_lateral_termination_check.py  test_position.py  test_route_parallel.py  test_safety.py
bluebird-gymnasium/tests/state_repr/: conftest.py  test_extraminimal.py  test_full.py  test_minimal.py  test_relative.py  test_vanilla.py
docs/: mkdocs.yml  pyproject.toml
docs/overrides/: main.html
docs/src/: atc-introduction-and-glossary.md  getting-started.md  how-to-contribute.md  index.md  mkdocs-guide.md
docs/src/atc/: aircraft.md  airspace.md  clearances.md  coordinations.md  index.md
docs/src/javascripts/: nav-state.js
docs/src/stylesheets/: nav.css
docs/tests/: test_examples.py
(+187 files in other folders)
