[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Project Bluebird"}]
description = "A REST API for the Project Bluebird Digital Twin"
name = "bluebird-api"
license = "AGPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10,<3.15"
dependencies = [
  "bluebird-dt",
  "fastapi>=0.135.1,<0.136",
  "lxml-html-clean>=0.4.4",
  "uvicorn>=0.41.0,<0.42",
]

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  "ruff>=0.15.11,<0.16",
  "pytest>=9.0.3,<10",
  "pytest-xdist>=3.8.0,<4.0.0",
  "pytest-asyncio>=1.3.0,<1.4.0",
  "httpx>=0.28.1",
]

# [tool.hatch.build.targets.wheel]
# # hatchling will by default use the gitignore file and therefore ignore the proprietary folder, but we do want to include some files
# include = ["../bluebird-hmi/dist/*"]

[tool.ruff]
extend-exclude = ["*.ipynb", "tests/*"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "F821", # Undefined name
  "B019", # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
  "ISC001", # clashes with formatter
  "RUF100", # Unused `noqa` directive. (Does not work for multiple on one line)
]
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "PD", # pandas-vet
  "W", # pycodestyle
  "ANN", # flake8-annotations
  "ASYNC", #flake8-async
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "ARG", # flake8-unused-arguments
  "PD", # pandas-vet
  "R", # refactor
  "W", # warnings
  "PERF", #perflint
  "RUF", # ruff
  "NPY201", # numpy v2. depreciation checking
]

[tool.ruff.lint.per-file-ignores]
# ignores for the test files explicitly
"tests/*" = [
  "E712", # Avoid equality comparisons to `True`; use `if received:` for truth
]

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
bluebird-dt = { workspace = true }

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
