[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Project Bluebird"}]
description = "A simulation and AI development framework for air traffic control."
license = "AGPL-3.0-or-later"
name = "bluebird-dt"
readme = "README.md"
version = "0.2.0"
requires-python = ">=3.10,<3.15"
dependencies = [
    "geojson>=3.2.0,<4",
    "geopy>=2.4.1,<3",
    "matplotlib>=3.10.8,<4",
    "numpy>=2.2.6",
    "pandas>=2.2.3,<3",
    "pyarrow>=23.0.1,<24",
    "pydantic>=2.12.5,<3",
    "pyproj>=3.7.1,<3.8",
    "python-dateutil>=2.9.0,<3",
    "requests>=2.33.0,<3",
    "scipy>=1.15.3,<2",
    "shapely>=2.1.2,<3",
]

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  "ruff>=0.15.11,<0.16",
  "pytest>=9.0.3,<10",
  "pytest-xdist>=3.8.0,<4.0.0",
  "pandas-stubs>=2.3.2.250926",
  "deepdiff>=8.6.2",
  "pytest-cov>=7.0.0,<8.0.0",
]

notebook = [
  "jupyter>=1.1.1",
]

docs = [
  "mkdocs-macros-plugin>=1.3.9",
  "mkdocs-material>=9.6.16",
  "mkdocstrings[python]>=0.30.0",
  "tomli>=2.2.1",
]

[project.urls]
Documentation = "http://docs.projectbluebird.ai"
Repository = "https://github.com/project-bluebird/BluebirdATC"

[tool.hatch.build]
packages = ["bluebird_dt"]

[tool.ruff]
extend-exclude = ["*.ipynb", "tests/*"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "F821", # Undefined name
  "B019", # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
  "ISC001", # clashes with formatter
  "RUF100", # Unused `noqa` directive. (Does not work for multiple on one line)
]
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "PD", # pandas-vet
  "W", # pycodestyle
  "ANN", # flake8-annotations
  "ASYNC", #flake8-async
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "ARG", # flake8-unused-arguments
  "PD", # pandas-vet
  "R", # refactor
  "W", # warnings
  "PERF", #perflint
  "RUF", # ruff
  "NPY201", # numpy v2. depreciation checking
]

[tool.ruff.lint.per-file-ignores]
# ignores for the test files explicitly
"tests/*" = [
  "E712", # Avoid equality comparisons to `True`; use `if received:` for truth
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
