[project]
name = "bluebird-gymnasium"
version = "0.0.0"
description = "An gymnasium environment for air traffic control."
authors = [{name="Project Bluebird"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "gymnasium>=0.29.1",
    "imageio>=2.37.3,<3",
    "jupyter>=1.1.1,<2",
    "bluebird-dt",
]

# list of extras (optional dependencies)
[project.optional-dependencies]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-xdist>=3.8.0,<4.0.0",
    "ruff>=0.15.11,<0.16",
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
]

[tool.uv.sources]
bluebird-dt = {path = "../bluebird-dt", editable = true}

[tool.ruff]
extend-exclude = ["*.ipynb", "tests/*"]
line-length = 80
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["bluebird_gymnasium"]
