[project]
name = "bluebird-gymnasium"
version = "0.1.0"
license = "AGPL-3.0-or-later"
description = "An gymnasium environment for air traffic control."
authors = [{name="Project Bluebird"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "gymnasium>=0.29.1",
    "imageio>=2.37.3,<3",
    "jupyter>=1.1.1,<2",
    "bluebird-dt==0.1.0",
]

# list of extras (optional dependencies)
[project.optional-dependencies]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-xdist>=3.8.0,<4.0.0",
    "ruff>=0.15.11,<0.16",
]

[tool.uv.sources]
bluebird-dt = { workspace = true }

[tool.ruff]
extend-exclude = ["*.ipynb", "tests/*"]
line-length = 80
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["bluebird_gymnasium"]
