[project]
name = "bluebird-dt-docs"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "bluebird-dt==0.1.0",
    "bluebird-api==0.1.0",
    "bluebird-gymnasium==0.0.0",
    "mkdocs==1.6.1",
    "mkdocs-jupyter==0.26.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.3",
    "mkdocs-monorepo-plugin==1.1.2",
    "mkdocs-macros-plugin==1.5.0",
]

[tool.uv.sources]
bluebird-dt = { workspace = true }
bluebird-api = { workspace = true }
bluebird-gymnasium = { workspace = true }
